# book-digests

./: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.test  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-image.yml
migrations/: env.py
migrations/versions/: 89aeb2c5fb9f_initial_database_schema.py
postgres/: create_databases.sql
src/: main.py
src/api/v1/: authors.py  books.py  chapters.py  digests.py  router.py
src/config/: settings.py
src/core/: log.py
src/crud/: authors.py  books.py  chapters.py  digests.py
src/database/: session.py
src/exceptions/: __init__.py  exceptions.py  handler.py
src/models/: __init__.py  author.py  book.py  chapter.py  digest.py
src/schemas/: __init__.py  author.py  book.py  chapter.py  digest.py  responses.py
src/services/: __init__.py  authors.py  books.py  chapters.py  digests.py  paginations.py
tests/: conftest.py
tests/api/v1/: test_v1_authors.py  test_v1_books.py  test_v1_chapters.py  test_v1_digests.py
tests/crud/: test_authors.py  test_books.py  test_chapters.py  test_digests.py
tests/services/: test_paginations.py  test_services_authors.py  test_services_books.py  test_services_chapters.py  test_services_digests.py
